# cube-based-terrain-generator

./: .gitignore  CMakeLists.txt  cube-based-terrain-generator  readme.md
resources/shaders/: basic.frag
src/: camera.cpp  camera.h  cube.cpp  cube.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  stdafx.h  window.cpp  window.h
src/shaders/: basic.vert
src/shapes/: cube.cpp  cube.h  object.h  poly.cpp  poly.h  square.cpp  square.h
